# monolingual-text-only-for-mt

./: .gitignore  README.md  check_checkpoint.sh  compare_checkpoints.py  pyproject.toml  run_4gpu.sh  run_debug.sh  test_config.py  test_model.py
configs/: base.yaml  config.yaml  gpu_4bit.yaml  gpu_4x16gb.yaml  gpu_8bit.yaml  gpu_full.yaml
configs/data/: default.yaml
configs/experiment/: 4x16gb.yaml  96gb.yaml  debug.yaml
configs/gpu/: a100.yaml  single_4bit.yaml
configs/model/: midm.yaml
configs/training/: default.yaml
data/eval/: qualitative_prompts.json
data/processed/: README.md
project/: .gitignore  README.md
project/configs/: base.yaml  phase1_denoising.yaml
project/scripts/: preprocess_all.py
project/src/: eval_metrics.py  eval_qualitative.py  train.py
scripts/: compare_checkpoints.py  create_training_state.py  preprocess_all.py  test_model.py  test_translation.py
src/: train.py
src/bt/: transformers_generator.py  vllm_generator.py
src/data/: __init__.py  buffer.py  collator.py  composer.py  dataloader.py  loader.py  noise.py  parsers.py  pool.py  prompt_builder.py
src/data/sampling/: __init__.py  balanced.py  base.py  weighted.py
