[project]
name = "midm-financial-translation"
version = "0.1.0"
description = "Financial Domain Translation Model using MidM"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "peft>=0.7.0",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0",
    "huggingface_hub>=0.20.0",
    "wandb>=0.16.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "scipy",
    "sentencepiece",
    "datasets>=2.14.0",
    "sacrebleu",
    "pandas",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0"
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]
vllm = ["vllm>=0.2.7"]

[tool.uv]
# PyTorch CUDA 버전 맞추기 (필요시 주석 해제)
# index-url = "https://download.pytorch.org/whl/cu118"
